testdata/baselines/reference/submodule/conformance/requireTwoPropertyAccesses.errors.txt
mod.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== requireTwoPropertyAccesses.js (0 errors) ====
    const value = require("./mod").x.y
    console.log(value)
    
==== mod.js (1 errors) ====
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        x: {
            y: "value"
        }
    }